# pneumonia-detection

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: app.py  routes.py  schemas.py
configs/: inference_config.yaml  train_config.yaml
notebooks/: 01_eda.ipynb  02_training.ipynb  03_evaluation.ipynb
scripts/: download_data.sh  export_onnx.py  split_data.py
src/pneumonia/data/: augmentation.py  dataset.py  split.py
src/pneumonia/inference/: predictor.py
src/pneumonia/model/: classifier.py  gradcam.py
src/pneumonia/training/: callbacks.py  evaluator.py  trainer.py
src/pneumonia/utils/: config.py  logging.py
tests/: conftest.py  test_api.py  test_dataset.py  test_gradcam.py  test_model.py
ui/: demo_streamlit.py
